--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/google-spreadsheet": "^3.2.1",
     "@types/gtag.js": "^0.0.10",
     "@types/node": "^17.0.14",
-    "@types/react": "^17.0.38",
+    "@types/react": "18.0.1",
     "@typescript-eslint/eslint-plugin": "^5.10.2",
     "@typescript-eslint/parser": "^5.10.2",
     "eslint": "8.8.0",
@@ -45,5 +45,6 @@
     "prettier-eslint": "^13.0.0",
     "prettier-eslint-cli": "^5.0.1",
     "typescript": "^4.5.5"
-  }
+  },
+  "packageManager": "yarn@4.4.1+sha512.f825273d0689cc9ead3259c14998037662f1dcd06912637b21a450e8da7cfeb4b1965bbee73d16927baa1201054126bc385c6f43ff4aa705c8631d26e12460f1"
 }
